--- a/assets/css/public-style.css
+++ b/assets/css/public-style.css
@@ -25,6 +25,7 @@
 
 #comments.wpnat-comments-area.modern .comment-respond form, #comments.wpnat-comments-area.twitter .comment-respond form, #comments.wpnat-comments-area.discord .comment-respond form {
   padding-left: 65px;
+  position: relative;
 }
 
 #comments.wpnat-comments-area.modern .comment-respond form .comment-notes, #comments.wpnat-comments-area.twitter .comment-respond form .comment-notes, #comments.wpnat-comments-area.discord .comment-respond form .comment-notes {
@@ -58,8 +59,12 @@
 }
 
 #comments.wpnat-comments-area.modern .comment-respond form .wpnat-common-input.wpnat-comment-form-comment img, #comments.wpnat-comments-area.twitter .comment-respond form .wpnat-common-input.wpnat-comment-form-comment img, #comments.wpnat-comments-area.discord .comment-respond form .wpnat-common-input.wpnat-comment-form-comment img {
+  display: block;
   position: absolute;
   left: 0;
+  height: calc(2.25 * 1rem);
+  min-height: inherit;
+  width: calc(2.25 * 1rem);
 }
 
 #comments.wpnat-comments-area.modern .comment-respond form .form-submit, #comments.wpnat-comments-area.twitter .comment-respond form .form-submit, #comments.wpnat-comments-area.discord .comment-respond form .form-submit {
@@ -129,10 +134,6 @@
 #comments.wpnat-comments-area.modern .comment-respond {
   margin-top: 0;
   margin-bottom: 0;
-}
-
-#comments.wpnat-comments-area.modern .comment-respond form {
-  padding-left: 65px;
 }
 
 #comments.wpnat-comments-area.modern .comment-respond form .wpnat-common-input input, #comments.wpnat-comments-area.modern .comment-respond form .wpnat-common-input textarea {
