--- a/assets/css/public-style.scss
+++ b/assets/css/public-style.scss
@@ -53,6 +53,7 @@ $primary-font: 'Roboto', sans-serif;
 
 			form {  
 				padding-left: 65px;
+				position: relative;
 
 				.comment-notes {
 					display: none;
@@ -78,8 +79,12 @@ $primary-font: 'Roboto', sans-serif;
 						margin-top: 0;
 
 						img {
+							display: block;
 							position: absolute;
 							left: 0;
+							height: calc(2.25 * 1rem);
+							min-height: inherit;
+							width: calc(2.25 * 1rem);
 						}
 					}
 				}
@@ -159,7 +164,6 @@ $primary-font: 'Roboto', sans-serif;
 			margin-bottom: 0;
 
 			form {
-				padding-left: 65px;
 
 				.wpnat-common-input {
 
